# greentic-llm

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  crates-publish.yml  dev-publish.yml  publish.yml
src/: capabilities.rs  lib.rs  mock.rs  provider.rs  rig_backend.rs
src/credentials/: env_source.rs  mod.rs
tests/: smoke.rs
